# envsense

./: pyproject.toml
src/envsense/: app.py  envsense.py
src/firmware/: firmware.ino
tests/: test_envsense.py
