[tool.poetry]
name = "envsense"
version = "0.1.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bleak = "^0.13.0"
rumps = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
envsense = "envsense.app:main"